# stn-semantic-automation

./: README.md  docker-compose.yml  test_all.sh
.github/workflows/: ci.yml
go-service/: Dockerfile  go.mod  main.go
python-service/: main.py  requirements.txt
r-service/: Dockerfile  install_deps.R  main.R
rust-service/: Cargo.toml  Dockerfile
rust-service/src/: main.rs
