[package]
name = "rust-service"
version = "1.0.0"
edition = "2021"

[dependencies]
# Веб-фреймворк для обработки семантических узлов
actix-web = "4.9.0"

# Работа с JSON структурами
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Международный валидатор описаний сути
jsonschema = "0.18.0"
